--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,8 +63,8 @@
     </div>
     <div id="main">
         <div id="main_top">
-            <span style="color: darkgreen">记录生活,记录美!!!</span>
-            <a href="/addBlog">&nbsp;&nbsp;&nbsp;&nbsp;写博客</a></div>
+            <span style="color: darkgreen; font-size: 20px">记录生活,记录美!!!</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;<a href="/addBlog">写博客</a></div>
         <div id="main_bottom">
             <#list list as player>
                 <div id="${player.blogId}" class="blogClass">
