--- a/src/main/resources/templates/userInfo.html
+++ b/src/main/resources/templates/userInfo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>个人信息：</title>
 </head>
 <body>
-姓名：<span th:text="${users.name}"></span><br/>
-年龄：<span th:text="${users.age}"></span>
+姓名：<span>${users.name}</span><br/>
+年龄：<span>${users.age}</span>
 </body>
 </html>
