--- a/src/main/resources/templates/usersInfo.html
+++ b/src/main/resources/templates/usersInfo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>个人信息：</title>
+    <title>所有用户信息：</title>
 </head>
 <body>
 <table border="1">
