--- a/src/main/resources/templates/addBlog.html
+++ b/src/main/resources/templates/addBlog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>添加</title>
 </head>
 <body>
 <div id="box">
-    <form id="addBlog" action="/blog/addBlogInfo" method="post">
+    <form id="addBlog" action="/blog/addBlogInfo" method="post" accept-charset="utf-8">
         标题：<input name="blogTitle">
         关键字：<input name="blogKeyword">
         内容：<input name="blogDescription">
