--- a/src/main/resources/templates/pay/addMoney.html
+++ b/src/main/resources/templates/pay/addMoney.html
@@ -26,7 +26,7 @@
 <div>
     <form action="/aliPay/goPay/" method="post" accept-charset="utf-8">
         <h2>开始你的表演:</h2>
-        <span>金额：</span><input type="text" name="money" placeholder="10"/>
+        <span>金额：</span><input type="text" name="money" value="10"/>
         <br/><br/>
         <input type="submit" class="ip" value="赞赏">
     </form>
