--- a/src/main/resources/templates/bottom.html
+++ b/src/main/resources/templates/bottom.html
@@ -14,15 +14,19 @@
             height: 800px;
             margin: 0px auto;
         }
-        #main_top{margin-top: 50px;
+        #main_top{
+            margin-top: 50px;
             width: 100%;
             height: 100px;
         }
         #main_middle{
-            /*background-color: red;*/
+            width: 100%;
+            height: 700px;
         }
         #main_bottom{
-
+            width: 100%;
+            height: 100px;
+            margin-top: 0px;
         }
         .blogClass{
             width: 90%;
